--- a/.tbstore/configuration.yml
+++ b/.tbstore/configuration.yml
@@ -6,6 +6,7 @@ tags:
   - blog
   - blog module
   - bees blog
+  - beesblog
 description_short: bees blog is the official thirty bees blog module that comes standard with all thirty bees installations allowing you to make blog posts from your shop.
 description: description.md
 images:
