--- a/.tbstore/configuration.yml
+++ b/.tbstore/configuration.yml
@@ -12,4 +12,10 @@ description: description.md
 images:
   - image-1.png
   - image-2.png
+gdpr_compliant: true
 license: MIT
+php_version:
+  - 5.6
+  - 7.0
+  - 7.1
+  - 7.2
